<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">BookHotels</string>
    <string name="title_activity_home_nav" translatable="false">HomeNavActivity</string>
    <string name="title_home">Explore</string>
    <string name="title_dashboard" translatable="false">Saved</string>
    <string name="title_notifications" translatable="false">Inbook</string>
    <string name="title_account" translatable="false">Account</string>
    <string name="timkiem_thanhpho">City name</string>
    <string name="diemden" translatable="false">Top destination</string>
    <string name="goiy">Suggestions</string>
    <string name="xemthem">see more</string>
    <string name="gioithieu">Introduce</string>
    <string name="quydinh">Regulations</string>

    <!--register-->
    <string name="hovaten">First and last name</string>
    <string name="diachiemail">Email</string>
    <string name="password">password</string>
    <string name="laimk">Confirm password</string>
    <string name="dangki">Register</string>
    <string name="thongtin">Information</string>
    <string name="caidat">Setting</string>
    <string name="dangxuat">Log out</string>
    <string name="matkhau">password</string>
    <string name="laimatkhau">Confirm password</string>
    <string name="quaylaidangnhap">Do you already have an account?</string>
    <string name="dangnhap">Login</string>
    <string name="gia">$/night</string>
    <string name="maso">Code :</string>


    <string name="tienganh">English</string>
    <string name="tiengviet">Vietnamese</string>
    <string name="search">search...</string>
    <string name="xacnhan">Tôi xin cam đoan thông tin trên là hoàn toàn chính xác</string>
    <string name="phuongthucthanhtoan">Phương thức thanh toán</string>
    <string name="chuyenkhoan">Chuyển Khoản</string>
    <string name="thanhtoantainoi">Thanh toán tại phòng</string>
    <string name="xacnhanphong">Xác nhận</string>
    <string name="sodienthoai">Số điện thoại</string>
    <string name="tennguoidat">Họ và Tên</string>
    <string name="chitiet">Chi tiết</string>
    <string name="thanhtoan">Thanh toán</string>
    <string name="Chat">Chat</string>
    <string name="nhaptinnhan">Nhập tin nhắn...</string>
    <string name="moibandangnhap">Mời bạn đăng nhập để kết nối tin nhắn</string>
    <string name="loiemail">Email không hợp lệ</string>
    <string name="loimk">mật khẩu phải 6 kí tự trở nên</string>
</resources>
