<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:orientation="vertical"
        android:background="@color/white"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".uiview.ThanhToanActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/mtoolbarlg"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

    </androidx.appcompat.widget.Toolbar>


    <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_margin="10dp"
            android:padding="10dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tennguoidat"
                android:textColor="@color/colorfacebook"
                android:layout_marginTop="5dp"
        />

        <EditText
                android:id="@+id/edTenNguoiNhan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=""
                android:layout_marginTop="10dp"
                android:background="@drawable/border_thanhtoan"
                android:textSize="10sp"
                android:textColor="@color/colorGray"
        />

        <EditText
                android:id="@+id/edDiaChi"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:hint="@string/chitiet"
                android:gravity="top"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_thanhtoan"
                android:textSize="10sp"
                android:textColor="@color/colorGray"
        />

        <EditText
                android:id="@+id/edSoDT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sodienthoai"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_thanhtoan"
                android:textSize="10sp"
                android:inputType="number"
                android:textColor="@color/colorGray"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phuongthucthanhtoan"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorfacebook"

        />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
        >

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
            >

                <ImageButton
                        android:id="@+id/imNhanTienKhiGiaoHang"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/ship"
                        android:scaleType="centerInside"
                        android:background="@color/white"

                />

                <TextView
                        android:id="@+id/txtNhanTienKhiGiaoHang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thanhtoantainoi"
                        android:textSize="12sp"
                />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
            >

                <ImageButton
                        android:id="@+id/imChuyenKhoan"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/visa"
                        android:scaleType="centerInside"
                        android:background="@color/white"

                />

                <TextView
                        android:id="@+id/txtChuyenKhoan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chuyenkhoan"
                        android:textSize="12sp"
                />

            </LinearLayout>



        </LinearLayout>

        <CheckBox
                android:id="@+id/cbThoaThuan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/xacnhan"
                android:layout_margin="10dp"
        />

        <Button
                android:id="@+id/btnThanhToan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/xacnhanphong"
                android:background="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:layout_gravity="bottom"
        />
    </LinearLayout>



</LinearLayout>


