<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:context=".uiview.register.RegisterActivity">


    <androidx.appcompat.widget.Toolbar
            android:id="@+id/restablayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">


        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edthovaten"
                    android:hint="@string/hovaten"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtemail"
                    android:hint="@string/diachiemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
        >

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtdkmatkhau"
                    android:hint="@string/matkhau"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
        >

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edmatkhaudangnhap"
                    android:hint="@string/laimatkhau"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/btnregister"
                android:layout_marginTop="16dp"
                android:text="@string/dangki"
                android:textColor="#FFF"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        <RelativeLayout
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/txthoi"
                    android:text="@string/quaylaidangnhap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:textColor="@color/colorPrimary"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/txthoi"
                    android:text="@string/dangnhap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


        </RelativeLayout>

        <LinearLayout
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <Button
                    android:id="@+id/btnfacedn"
                    android:text="FaceBook"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/facebookiconsmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custum_facebook"
                    android:textColor="@color/white"/>

            <Button
                    android:textColor="@color/colorgogle"
                    android:id="@+id/btngoogledn"
                    android:layout_marginLeft="5dp"
                    android:text="Google"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/googleplussmall"
                    android:layout_width="match_parent"
                    android:background="@drawable/custum_google"
                    android:layout_height="wrap_content"/>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>