<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:paddingBottom="2dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:layout_gravity="fill_vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="50dp"
            android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
                android:isScrollContainer="false"
                android:fitsSystemWindows="false"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        >

            <LinearLayout
                    android:id="@+id/linesearch"
                    android:layout_margin="16dp"
                    android:background="@drawable/custum_search"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                <TextView
                        android:drawablePadding="10dp"
                        android:textSize="18sp"
                        android:layout_marginLeft="16dp"
                        android:layout_gravity="center"
                        android:drawableLeft="@drawable/search"
                        android:text="@string/timkiem_thanhpho"
                        android:background="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        <LinearLayout
                app:layout_scrollFlags="scroll"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <TextView
                    android:textColor="@color/colortextdiscovery"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:text="@string/diemden"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclecity"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                    android:textColor="@color/colortextdiscovery"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:text="@string/goiy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView

                    android:id="@+id/recyclehotel"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

            <RelativeLayout
                    android:id="@+id/relaytivexemthem"
                    android:background="@drawable/custum_xemthem"
                    android:layout_margin="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="45dp">

                <TextView
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:text="@string/xemthem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </RelativeLayout>

        </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout
    >
</LinearLayout>